Fixed bug with margin on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,17 @@ ul li {
     display: grid;
 }
 
+@media (max-width: 400px) and (min-width: 340px) {
+    .main__image {
+        margin-top: 30px;
+    }
+}
+
+@media (max-width: 340px) {
+    .main__image {
+        margin-top: 90px;
+    }
+}
 
 
 @media (max-width: 640.98px){
@@ -279,6 +290,7 @@ ul li {
         color: #4338CA;
         
     }
+ 
     
 }
 
@@ -303,6 +315,7 @@ ul li {
     .main__content {
         padding-right: 0px;
         margin-bottom: 120px;
+        margin-top: -50px;
     }
     .name__title{
         margin-bottom: 40px;
